WIP fix buttons alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,7 @@
   display: inline-block;
   min-width: 100%;
 }
+.app-component-content-container {
+  color: #757575;
+}
+
