--- a/src/app/pivotal-project-list/pivotal-project-list.component.scss
+++ b/src/app/pivotal-project-list/pivotal-project-list.component.scss
@@ -5,3 +5,19 @@
 .pivotal-project-list-project-list {
   display: inline-block;
 }
+.pivotal-project-list-button-container {
+
+  // TODO: Fix alignment of buttons
+
+
+  // width: 40%;
+  // margin:auto;
+}
+.pivotal-project-list-button-label {
+    // TODO: Fix alignment of buttons
+  // float: left;
+}
+.pivotal-project-list-button {
+    // TODO: Fix alignment of buttons
+  // float: right;
+}
